@@ -3,7 +3,7 @@
                           -------------------
     begin                : Fri Nov  2 01:19:16 UTC 2001
     copyright            : (C) 2005 by Andrew Ruder
-                         : (C) 2015 The GAP Team
+                         : (C) 2015-2016 The GAP Team
     email                : aeruder@ksu.edu
  ***************************************************************************/
 
@@ -233,11 +233,12 @@ extern NSString *NetclassesErrorAborted;
  * Called when the connection is closed.
  */
 - (void)connectionLost;
+
 /**
  * Called when a new connection occurs.  Will initialize a new object
  * of the class set with -setNetObject: with the new connection.
  */
-- (id <NetPort>)newConnection;
+- (id <NetPort>)setupNewConnection;
 @end
 
 /**
