@@ -3,7 +3,7 @@
                           -------------------
     begin                : Fri Nov  2 01:19:16 UTC 2001
     copyright            : (C) 2005 by Andrew Ruder
-                         : (C) 2015 The GAP Team
+                         : (C) 2015-2016 The GAP Team
     email                : aeruder@ksu.edu
  ***************************************************************************/
 
@@ -696,7 +696,7 @@ static TCPSystem *default_system = nil;
 {
 }
 
-- (id <NetPort>)newConnection
+- (id <NetPort>)setupNewConnection
 {
 	int newDesc;
 	struct sockaddr_in sin;
