@@ -1,3 +1,11 @@
+2016-12-12 Riccardo Mottola <rm@gnu.org>
+
+	* Source/NetTCP.h
+	* Source/NetTCP.m
+	* Source/NetBase.h
+	* Source/NetBase.m
+	Rename newConnection in setupConnection
+
 2015-02-28 Riccardo Mottola <rm@gnu.org>
 
 	* Source/NetBase.m
